link script.js to html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     </div>
 
     <div class="middle-section">
+        <div class="canvas">
 
+        </div>
     </div>
 
     <div class="footer">
         <p>Footer</p>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
