add function to make grid

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="footer">
-        <p>Footer</p>
+        <p>By Jason Potvin</p>
     </div>
     <script src="./script.js"></script>
 </body>
