create function for mouseover affect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <div class="middle-section">
         <div class="canvas">
-
+        </div>
+        <div class="controles">
+            <button type="button" class="clear-button">Clear</button>
+            <form class="canvas-size">
+                <label for="square-input">Canvas Size</label>
+                <input type="number" id="square-input" name="square-num">
+                <input type="submit" value="submit" onclick="text()">
+            </form>
+            <p id="demo"></p>
         </div>
     </div>
 
