make input feild to change size of grid

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </div>
 
     <div class="middle-section">
-        <div class="canvas">
+        <div class="canvas" id="canvas">
         </div>
         <div class="controles">
             <button type="button" class="clear-button">Clear</button>
             <form class="canvas-size">
                 <label for="square-input">Canvas Size</label>
                 <input type="number" id="square-input" name="square-num">
-                <input type="submit" value="submit" onclick="text()">
+                <button type="button" onclick="newSize()">click me</button>
             </form>
             <p id="demo"></p>
         </div>
