--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="middle-section">
-        <div class="canvas" id="canvas">
+        <div class="canvas">
         </div>
         <div class="controles">
             <button type="button" class="clear-button">Clear</button>
