add clear button

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="middle-section">
         <div class="canvas">
         </div>
+
         <div class="controles">
-            <button type="button" class="clear-button">Clear</button>
             <form class="canvas-size">
                 <label for="square-input">Canvas Size</label>
                 <input type="number" id="square-input" name="square-num">
                 <button type="button" onclick="newSize()">click me</button>
             </form>
-            <p id="demo"></p>
+            <button type="button" class="clear-button">Reset</button>
         </div>
     </div>
 
